Finalized color palette, established page layout and animated intro text.

--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
 <body>
   <div id="page-wrapper">
     <header>
-      <h1>Zachary C. Pruessner</h1>
       <nav>
         <ul>
-          <li><a class="nav-anchor" href="#about">About</li>
-          <li><a class= "nav-anchor" href="#projects">Projects</li>
-          <li><a class= "nav-anchor" href="#contact">Contact</li>
+          <li><a class="nav-anchor" href="#about">About</a></li>
+          <li><a class= "nav-anchor" href="#work">Work</a></li>
+          <li><a class= "nav-anchor" href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <section id="about">
+    <div class="container">
+      <section id="about">
+        <div id="intro-text">
+          <div class="name"><h1>Zachary C. Pruessner</h1></div>
+          <div class="descr"><p>an excellent human</p></div>
+        </div>
+      </section>
+    </div>
+    <div class="container">
+      <section id="work">
 
-    </section>
-    <section id="projects">
+      </section>
+    </div>
+    <div class="container">
+      <section id="contact">
 
-    </section>
-    <section id="contact">
-
-    </section>
-    <footer>
-
-    </footer>
-  </div>
+      </section>
+    </div>
 </body>
 </html>
