Adding structure and images to work section.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,47 @@
     </div>
     <div class="container">
       <section id="work">
-
+          <h1 class="work-header">Dis Ma Stuff</h1>
+          <div class="grid">
+            <a
+              href=""
+              target="_blank"
+              class="project-tile">
+              <img
+                class="project-image"
+                src="img\tribute-page.png"
+                alt="project"/>
+              <p class="project-title">Project Title</p>
+            </a>
+            <div class="grid">
+              <a
+                href=""
+                target="_blank"
+                class="project-tile">
+                <img
+                  class="project-image"
+                  src="img/survey-form.png"
+                  alt="project"/>
+                <p class="project-title">Project Title</p>
+              </a>
+              <div class="grid">
+                <a
+                  href=""
+                  target="_blank"
+                  class="project-tile">
+                  <img
+                    class="project-image"
+                    src="img/product-page.png"
+                    alt="project"/>
+                  <p class="project-title">Project Title</p>
+                </a>
+          </div>
+          <a
+            href="https://github.com/zachpruessner"
+            class="btn btn-show-all"
+            target="_blank">
+            Show all >
+          </a>
       </section>
     </div>
     <div class="container">
