Restructured the work section Added placeholder images Need new colors

--- a/index.html
+++ b/index.html
@@ -25,46 +25,68 @@
     </div>
     <div class="container">
       <section id="work">
-          <h1 class="work-header">Dis Ma Stuff</h1>
+          <h1 class="work-header">My Works</h1>
           <div class="grid">
-            <a
-              href=""
-              target="_blank"
-              class="project-tile">
-              <img
-                class="project-image"
-                src="img\tribute-page.png"
-                alt="project"/>
-              <p class="project-title">Project Title</p>
-            </a>
-            <div class="grid">
+            <div class="project-tile">
               <a
                 href=""
                 target="_blank"
-                class="project-tile">
+                class="project-anchor">
                 <img
                   class="project-image"
-                  src="img/survey-form.png"
+                  src="img\placeholder.png"
                   alt="project"/>
-                <p class="project-title">Project Title</p>
+                <p class="project-title">Tribute Page -- WIP</p>
               </a>
-              <div class="grid">
-                <a
-                  href=""
-                  target="_blank"
-                  class="project-tile">
-                  <img
-                    class="project-image"
-                    src="img/product-page.png"
-                    alt="project"/>
-                  <p class="project-title">Project Title</p>
-                </a>
+            </div>
+            <div class="grid-text">
+              <p>
+                My first HTML/CSS project. Still a long way to go.<br/>
+                Future revision is planned to improve responsiveness.
+              </p>
+            </div>
+            <div class="project-tile">
+              <a
+                href=""
+                target="_blank"
+                class="project-anchor">
+                <img
+                  class="project-image"
+                  src="img/placeholder.png"
+                  alt="project"/>
+                <p class="project-title">Survey -- WIP</p>
+              </a>
+            </div>
+            <div class="grid-text">
+              <p>
+                This is a basic survey form -- my second HTML/CSS project.<br/>
+                There is still a lot of room for improvement.
+              </p>
+            </div>
+            <div class="project-tile">
+              <a
+                href=""
+                target="_blank"
+                class="project-anchor">
+                <img
+                  class="project-image"
+                  src="img/placeholder.png"
+                  alt="project"/>
+                <p class="project-title">Product Landing -- WIP</p>
+              </a>
+            </div>
+            <div class="grid-text">
+              <p>
+                A simple product landing page. Quite unfinished at the moment.
+                <br/>There will be many improvements over time.
+              </p>
+            </div>
           </div>
           <a
             href="https://github.com/zachpruessner"
             class="btn btn-show-all"
             target="_blank">
-            Show all >
+            <<< Show all >>>>
           </a>
       </section>
     </div>
